--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -20,7 +20,39 @@ body {
   margin: 0 auto;
 }
 
+.product-search {
+  //position: absolute;
+  left: 50%;
+  top: 50%;
 
+  margin-top: 20px;
+  margin-left: -75px;
+  width: 150px;
+  height: 22px;
+}
+
+.cat-list ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-align: center;
+}
+
+.cat-list ul li {
+  display: inline;
+}
+
+.cat-list ul li a {
+  text-decoration: none;
+  padding: .2em 1em;
+  color: #fff;
+  background-color: #036;
+}
+
+.cat-list ul li a:hover {
+  color: #fff;
+  background-color: #369;
+}
 
 @import 'directives/main';
 @import 'home/main';
