--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -12,7 +12,10 @@
     <script src="/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="/socket.io-client/socket.io.js"></script>
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
-    <script src="/angular-payments/src/module.js"></script>
+    <script>
+      Stripe.setPublishableKey('pk_test_JdSjoyLLpeq1JQp2HrXfogR6');
+    </script>
+    <script src="http://cdn.rawgit.com/laurihy/angular-payments/2472bc9befa256780d106a8e53a9dea12b7341ed/lib/angular-payments.js"></script>
     <script src="/main.js"></script>
 </head>
 <body ng-app="FullstackGeneratedApp">
