touch ups to add product button, checkout validation and empty cart

--- a/browser/scss/checkout/order-summary.scss
+++ b/browser/scss/checkout/order-summary.scss
@@ -1,12 +1,12 @@
-.order-summary {
-  border-radius: 5px;
-  border: 1px solid black;
-  font-size: 1.2em;
-  padding-bottom: 15px;
+// .order-summary {
+//   border-radius: 5px;
+//   border: 1px solid black;
+//   font-size: 1.2em;
+//   padding-bottom: 15px;
 
 
-}
-.free {
-    font-weight: bold;
-    color: green;
-}
+// }
+// .free {
+//     font-weight: bold;
+//     color: green;
+// }
