--- a/browser/scss/main.scss
+++ b/browser/scss/main.scss
@@ -61,4 +61,6 @@ body {
 @import 'about/main';
 @import 'tutorial/main';
 @import 'login/main';
-@import 'checkout/order-summary';
+@import 'checkout/main';
+@import 'components/main';
+@import 'cart/main';
