--- a/server/app/views/index.html
+++ b/server/app/views/index.html
@@ -5,6 +5,9 @@
     <title>Fullstack Academy Generated Application</title>
     <link rel="stylesheet" type="text/css" href="/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="/style.css" />
+    <link rel="stylesheet" type="text/css" href="/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="/bootstrap-social/bootstrap-social.css" />
+    <link rel="stylesheet" type="text/css" href="/bootstrap-sweetalert/lib/sweet-alert.css" />
     <script src="/lodash/index.js"></script>
     <script src="/angular/angular.js"></script>
     <script src="/angular-ui-router/release/angular-ui-router.js"></script>
@@ -12,6 +15,7 @@
     <script src="/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="/socket.io-client/socket.io.js"></script>
     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+     <script src="/bootstrap-sweetalert/lib/sweet-alert.js"></script>
     <script>
       Stripe.setPublishableKey('pk_test_JdSjoyLLpeq1JQp2HrXfogR6');
     </script>
