--- a/browser/scss/home/main.scss
+++ b/browser/scss/home/main.scss
@@ -8,5 +8,11 @@
     margin-top: 40px;
     text-align: center;
   }
+  h3 {
+    text-align: center;
+    a{
+      color: #f30046;
+    }
+  }
 }
 
