--- a/browser/scss/cart/main.scss
+++ b/browser/scss/cart/main.scss
@@ -10,3 +10,19 @@
 }
 }
 
+.table-hover > tbody > tr {
+  a {
+    color: #f30046;
+  }
+  &:hover {
+    background-color: #fC0;
+    color: black;
+    opacity: 0.7;
+  }
+}
+
+.cart-minus, .cart-plus {
+  &:hover {
+    cursor: pointer;
+  }
+}
