fixed css rgb bug

--- a/browser/scss/products/main.scss
+++ b/browser/scss/products/main.scss
@@ -9,7 +9,7 @@
   background: none;
   color: white;
   &:hover {
-    background: rgb(255, 204, 0, 0.7);
+    background-color: rgb(255, 204, 0);
 
   }
   &.active {
