--- a/browser/scss/products/main.scss
+++ b/browser/scss/products/main.scss
@@ -10,7 +10,7 @@
   color: white;
   &:hover {
     background-color: rgb(255, 204, 0);
-
+    opacity: 0.9;
   }
   &.active {
     background-color: #fC0;
